tests/expectations/compiler/libraries/lib_submodule_non_const_generic_arg_fail.out
Error [ECMP0376012]: Unable to resolve call to generic function `math_lib::ops::scale`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:5:39
     |
   5 |         return math_lib::ops::scale::[n](5u32);  // n is a runtime variable, not a const
     |                                       ^
